# Ducon_Library_Backend

./: .gitignore  CHANGELOG.md  CheatSheet.md  IDEA.md  README.md  VPS_DEPLOYMENT.md  apache.conf.example  apache.userdata.ducon-proxy.conf.example  database_schema.sql  env_template.txt  ingest_gemini_embeddings.py  ingest_images.py  ingest_test.py  migrate_storage.py  presentation.html  pyproject.toml  requirements-e2e.txt  requirements.txt  skills-lock.json  sync_image_format.py  upload_images_to_r2.py
app/: auth.py  build_meta.py  catalog_filter_context.py  catalog_keyword_search.py  chat_agent.py  chat_session.py  chromadb.py  cleanup_scheduler.py  cleanup_service.py  config.py  db.py  designer_agent.py  designer_cleanup.py  email_service.py  error_logger.py  gemini.py  gemini_embedder.py  generation_jobs.py  guest_identity.py  guest_session_token.py  guest_usage.py  hashing.py  image_gen_agent.py  image_utils.py  live_session.py  llm_provider.py  main.py  ml.py  models.py  otp_service.py  prompt_generator_session.py  prompt_loader.py  rate_limiter.py  search_tools.py  signed_urls.py  sse.py  storage.py  studio_directions_agent.py  tool_generate_image.py  validators.py  (+1 more)
chroma_db/: chroma.sqlite3
dev_dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
presentation/: ARCHITECTURE_PRESENTATION.html
scripts/: extract_prompts_to_md.py  hash_admin_password.py  migrate_admin_otp.py  run_deploy_checks.py  set_r2_cors.py  strip_gemini_prompts.py  strip_live_prompt.py  vps_deploy.sh
tests/: DEPLOYMENT_ENDPOINT_CHECKLIST.md  test_admin_metrics.py  test_ai_search_image_input.py  test_app_syntax_smoke.py  test_cache_flush.py  test_catalog_keyword_search.py  test_chat_session_postgres.py  test_chat_stream_completion.py  test_chat_tools_deploy.py  test_designer_job_cleanup.py  test_designer_job_cross_worker.py  test_designer_slider_and_async_blocking.py  test_dev_benchmark_provider_and_tools.py  test_email_domain_validation.py  test_email_service.py  test_generation_image_serve.py  test_generation_jobs_cross_worker.py  test_guest_identity.py  test_guest_session_token.py  test_guest_usage.py  test_langfuse_observability.py  test_live_go_away.py  test_multi_image_endpoint_deploy.py  test_request_id.py  (+9 more)
(+105 files in other folders)
