[project]
name = "ducon-library-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.0",
    "fastapi>=0.128.0",
    "pathlib>=1.0.1",
    "pillow>=12.1.0",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.2",
    "uvicorn>=0.40.0",
]
