[project]
name = "ducon-library-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.40.0",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "boto3>=1.42.61",
    "chromadb>=1.5.0",
    "disposable-email-domains>=0.0.222",
    "fastapi>=0.128.0",
    "google-auth>=2.48.0",
    "google-genai>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pathlib>=1.0.1",
    "phonenumbers>=9.0.29",
    "pillow>=12.1.0",
    "pillow-heif>=1.3.0",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "sqlalchemy[asyncio]>=2.0.47",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "e2e: Selenium end-to-end tests against a live Ducon app (run with: pytest -m e2e tests/e2e)",
    "e2e_gen: E2E tests that may trigger paid AI generation (requires E2E_ALLOW_GEN=1)",
]
